--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
     <link rel="shortcut icon" href="/favicons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Vara Starship" />
+    <meta name="apple-mobile-web-app-title" content="V-Starship" />
     <link rel="manifest" href="/favicons/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vara Starship</title>
+    <title>V-Starship</title>
   </head>
   <body>
     <div id="root"></div>
